Welcome paragraph on HQ.

--- a/sw/templates/dashboard/index.html
+++ b/sw/templates/dashboard/index.html
@@ -18,6 +18,9 @@
 {% endblock %}
 
 {% block content_body %}
+
+    <p>Welcome to the Sensible Washington volunteer website. We're glad you're here!</p>
+
     <h1>Recent Activity in Your Teams</h1>
 
     {% autopaginate team_actions %}
