Rename 'Admin Only' to 'Tools'

--- a/sw/templates/menu/site_sections_volunteer.html
+++ b/sw/templates/menu/site_sections_volunteer.html
@@ -4,4 +4,4 @@
 <li><a href="/teams/webcontent/wiki/VolunteerSupport/">Support</a></li>
 <li><a href="/teams/webcontent/wiki/YourLocalSW">Your Local SW</a></li>
 <li><a href="/teams/devops/wiki/FriendsFeature/">Friends</a></li>
-<li><a href="/teams/webcontent/wiki/AdminOnly/">Admin Only</a></li>
+<li><a href="/teams/webcontent/wiki/AdminOnly/">Tools</a></li>
