--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -1,20 +1,18 @@
 /* http://colorschemedesigner.com/#3741Tw0sRw0w0 */
 /* end colors */
-a {
-  color: #0b4f96; }
-
-.hq a {
-  color: #8a5300; }
-
-a:hover {
-  color: black; }
-
-.hq a:hover {
-  color: #0b4f96; }
-
 body {
   position: relative;
   font-family: "Lucida Grande", "Verdana", "Arial", sans-serif; }
+
+a {
+  color: #0b4f96; }
+  a:hover {
+    color: black; }
+
+.hq a {
+  color: #8a5300; }
+  .hq a:hover {
+    color: #0b4f96; }
 
 /* @group global */
 th {
@@ -36,7 +34,7 @@ td {
   height: 22px;
   color: white; }
   #auth-bar span + span {
-    padding-left: 1em; }
+    margin-left: 1em; }
   #auth-bar a {
     font-weight: bold;
     padding: 4px;
@@ -47,81 +45,77 @@ td {
   #auth-bar .right {
     text-align: right;
     float: right; }
+  #auth-bar .icon-link a:hover {
+    text-decoration: none; }
+    #auth-bar .icon-link a:hover span {
+      text-decoration: underline;
+      padding-left: 16px; }
+  #auth-bar .icon-link a span {
+    padding-left: 16px; }
+  #auth-bar #labs-link {
+    background: transparent url("/media/featurelabs/lightning.png") left top no-repeat; }
 
 /* @endgroup */
 /* @group header */
 .header {
-  margin-left: 0px;
-  position: relative;
-  width: 940px;
-  margin-top: 1em; }
-
-.hq .header {
-  margin-top: .5em; }
-
-.header {
   background-image: url("/media/images/logos/logo-246x140.gif");
+  background-position: 5px;
   background-repeat: no-repeat;
   background-size: 246px 140px;
-  background-position: 5px;
-  height: 140px;
   width: 940px;
-  padding: 0; }
+  height: 140px;
+  margin-left: 0px;
+  margin-top: 1em;
+  padding: 0;
+  position: relative; }
+  .header h1 a {
+    display: block;
+    height: 140px;
+    text-indent: -9999px; }
+  .header h2 {
+    display: table-cell;
+    width: 940px;
+    text-align: center;
+    position: absolute;
+    height: 105px;
+    top: 35px;
+    margin: 0; }
 
 .hq .header {
+  margin-top: .5em;
   background-image: url("/media/images/logos/logo-123x70.gif");
   background-size: 123px 70px;
   height: 70px; }
-
-.header h1 a {
-  display: block;
-  height: 140px;
-  text-indent: -9999px; }
-
-.hq .header h1 a {
-  height: 70px; }
-
-.header h2 {
-  display: table-cell;
-  width: 940px;
-  text-align: center;
-  position: absolute;
-  height: 105px;
-  top: 35px;
-  margin: 0; }
-
-.hq .header h2 {
-  top: 15px;
-  height: 40px; }
+  .hq .header h1 a {
+    height: 70px; }
+  .hq .header h2 {
+    top: 15px;
+    height: 40px; }
 
 #site-search {
   position: absolute;
   top: 1.5em;
   right: 1.5em; }
+  #site-search input {
+    width: 200px;
+    height: 1.5em; }
 
 .hq #site-search {
   top: 20px; }
 
-#site-search input {
-  width: 200px;
-  height: 1.5em; }
-
 #follow-campaign {
   position: absolute;
   top: 55px;
-  right: 20px; }
-
-.hq #follow-campaign {
-  display: none; }
-
-#follow-campaign {
+  right: 20px;
   width: 200px;
   text-align: center;
   font-weight: bold; }
+  #follow-campaign li {
+    display: inline;
+    margin-left: 0; }
 
-#follow-campaign li {
-  display: inline;
-  margin-left: 0; }
+.hq #follow-campaign {
+  display: none; }
 
 /* @end */
 /* @group #site-sections */
@@ -471,9 +465,8 @@ div#underconstruction {
   border-width: 1px 1px 4px 1px;
   border-color: #e68a00;
   border-style: solid; }
-
-#underconstruction p:last-child {
-  margin-bottom: 0; }
+  div#underconstruction p:last-child {
+    margin-bottom: 0; }
 
 div.beta-annotation p {
   background: #fff5e6;
