--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -17,7 +17,7 @@
     <link href="{{ STATIC_URL }}uni_form/uni-form.css" rel="stylesheet">
 
     {# Base #}
-    <link href="{{ STATIC_URL }}css/base.css?2010120904" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/base.css?2010120905" rel="stylesheet">
 
     {% block css %}{% endblock %}
 
@@ -82,12 +82,9 @@
     {% endspaceless %}</span>
     <span class="right">{% spaceless %}
         {% if user.is_authenticated %}
-            <span>Signed in as {{ user.username }}.</span>
-            <span><a href="{% url profile_detail username=user.username %}">Your Profile</a></span>
-            <span><a href="{% url account_logout %}">Sign Out</a></span>
+            {% include "base/auth_bar_signedin.html" %}
         {% else %}
-            <span><a href="{% url account_signup %}">Sign Up</a></span>
-            <span><a href="{% url account_login %}">Sign In</a></span>
+            {% include "base/auth_bar_signedout.html" %}
         {% endif %}
     {% endspaceless %}</span>
 </div>
