--- a/sw/templates/base_8_4.html
+++ b/sw/templates/base_8_4.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-    <div id="content" class="alpha omega grid_8">
+    <div id="content" class="alpha grid_8">
         {% include "site_messages.html" %}
         {% block content_body %}
             Content sections here.
@@ -9,7 +9,7 @@
     </div>
 
     {% block sidebar %}
-        <div id="sidebar" class="alpha grid_4">
+        <div id="sidebar" class="grid_4 omega">
             {% block sidebar_sections %}
                 <div class="section">
                     Sidebar sections here.
